--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "wasm:dev": "sh -c 'cd lib/wasm && wasm-pack build --dev --target web --out-dir ../_dist/wasm --out-name fluex_dsp'",
-        "watch:wasm": "sh -c 'cd lib/wasm && cargo watch -w src -s \"wasm-pack build --dev --target web --out-dir ../_dist/wasm --out-name fluex_dsp\"'",
-        "ps-watch:wasm": "powershell -Command \"cd lib; cargo watch -w src -s 'wasm-pack build --dev --target web --out-dir ../_dist/wasm --out-name fluex_dsp'\"",
+        "wasm:dev": "sh -c 'cd lib/wasm && wasm-pack build --dev --target web --out-dir ../_dist/wasm --out-name fluexgl-dsp-wasm'",
+        "watch:wasm": "sh -c 'cd lib/wasm && cargo watch -w src -s \"wasm-pack build --dev --target web --out-dir ../_dist/wasm --out-name fluexgl-dsp-wasm\"'",
+        "ps-watch:wasm": "powershell -Command \"cd lib; cargo watch -w src -s 'wasm-pack build --dev --target web --out-dir ../_dist/ --out-name fluexgl-dsp-wasm'\"",
         "dev": "concurrently -n WEB,RUST -c \"npm:watch:wasm\"",
-        "wasm:rel": "sh -c 'cd lib/wasm && wasm-pack build --release --target web --out-dir ../_dist/wasm --out-name fluex_dsp'",
-        "wasm:opt": "sh -c 'wasm-opt -Oz -o lib/_dist/wasm/fluex_dsp_bg.wasm lib/_dist/wasm/fluex_dsp_bg.wasm'",
+        "wasm:rel": "sh -c 'cd lib/wasm && wasm-pack build --release --target web --out-dir ../_dist/wasm --out-name fluexgl-dsp-wasm'",
+        "wasm:opt": "sh -c 'wasm-opt -Oz -o lib/_dist/wasm/fluexgl-dsp-wasm.wasm lib/_dist/wasm/fluexgl-dsp-wasm.wasm'",
         "build": "npm run wasm:rel && npm run wasm:opt"
     },
     "repository": {
