Aaaahh fuuckkk, can't get this shit t oworkkk

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
         "@types/node": "^24.10.0",
         "@typescript-eslint/eslint-plugin": "^8.46.3",
         "@typescript-eslint/parser": "^8.46.3",
-        "eslint": "^9.39.1"
+        "eslint": "^9.39.1",
+        "text-decoder": "^1.2.3"
     },
     "devDependencies": {
         "ts-loader": "^9.5.4",
