--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "wasm:dev": "sh -c 'cd lib/wasm && wasm-pack build --dev --target web --out-dir ../_dist/wasm --out-name fluexgl-dsp-wasm'",
-        "watch:wasm": "sh -c 'cd lib && cargo watch -w src -s \"wasm-pack build --dev --target web --out-dir ../_dist/wasm --out-name fluexgl-dsp-wasm\"'",
-        "ps-watch:wasm": "powershell -Command \"cd lib; cargo watch -w src -s 'wasm-pack build --dev --target web --out-dir ../_dist/ --out-name fluexgl-dsp-wasm'\"",
+        "wasm:dev:shell": "cd scripts && ./build-wasm.sh",
+        "watch:wasm:shell": "cd scripts && ./watch-wasm.sh",
+        "watch:wasm:powershell": "powershell -Command \"cd lib; cargo watch -w src -s 'wasm-pack build --dev --target web --out-dir ../_dist/ --out-name fluexgl-dsp-wasm'\"",
         "dev": "concurrently -n WEB,RUST -c \"npm:watch:wasm\"",
         "wasm:rel": "sh -c 'cd lib/wasm && wasm-pack build --release --target web --out-dir ../_dist/wasm --out-name fluexgl-dsp-wasm'",
         "wasm:opt": "sh -c 'wasm-opt -Oz -o lib/_dist/wasm/fluexgl-dsp-wasm.wasm lib/_dist/wasm/fluexgl-dsp-wasm.wasm'",
         "build": "npm run wasm:rel && npm run wasm:opt",
-        "webpack:build": "powershell ./scripts/BuildWebpackConfig.ps1",
+        "webpack:build:shell": "cd scripts && ./build-webpack-config.sh && cd ../",
+        "webpack:build:powershell": "powershell ./scripts/BuildWebpackConfig.ps1",
         "webpack:run": "npx webpack --config webpack.config.js"
     },
     "repository": {
