Latest webpack build

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "sh:webpack:build": "cd scripts && ./build-webpack-config.sh && cd ../",
         "ps:web-assembly:build": "powershell ./scripts/BuildWasm.ps1",
         "ps:web-assembly:watch": "powershell -Command \"cd lib; cargo watch -w src -s 'wasm-pack build --dev --target web --out-dir ../_dist/ --out-name fluexgl-dsp-wasm'\"",
-        "ps:webpack:build:": "powershell ./scripts/BuildWebpackConfig.ps1",
+        "ps:webpack:build": "powershell ./scripts/BuildWebpackConfig.ps1",
+        "ps:webpack:run": "npx webpack --config webpack.config.js",
         "dev": "concurrently -n WEB,RUST -c \"npm:watch:wasm\"",
         "wasm:rel": "sh -c 'cd lib/wasm && wasm-pack build --release --target web --out-dir ../_dist/wasm --out-name fluexgl-dsp-wasm'",
         "wasm:opt": "sh -c 'wasm-opt -Oz -o lib/_dist/wasm/fluexgl-dsp-wasm.wasm lib/_dist/wasm/fluexgl-dsp-wasm.wasm'",
