--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
         "sh:web-assembly:watch": "cd scripts && ./watch-wasm.sh",
         "sh:webpack:run": "npx webpack --config webpack.config.js",
         "sh:webpack:build": "cd scripts && ./build-webpack-config.sh && cd ../",
-        "ps:web-assembly:build": "powershell ./scripts/BuildWasm.ps1",
-        "ps:web-assembly:watch": "powershell -Command \"cd lib; cargo watch -w src -s 'wasm-pack build --dev --target web --out-dir ../_dist/ --out-name fluexgl-dsp-wasm'\"",
-        "ps:webpack:build": "powershell ./scripts/BuildWebpackConfig.ps1",
-        "ps:webpack:run": "npx webpack --config webpack.config.js",
+        "wasm-build-ps": "powershell ./scripts/powershell/BuildWasm.ps1",
+        "wasm-watch-ps": "powershell ./scripts/powershell/WatchWasm.ps1",
+        "webpack-build-ps": "powershell ./scripts/powershell/BuildWebpackConfig.ps1",
+        "webpack-run-ps": "npx webpack --config webpack.config.js",
+        "webpack-watch-ps": "npx webpack --config webpack.config.js --watch",
+        "worklets-watch-ps": "tsx ./scripts/watch-worklets-dev.ts",
         "dev": "concurrently -n WEB,RUST -c \"npm:watch:wasm\"",
         "wasm:rel": "sh -c 'cd lib/wasm && wasm-pack build --release --target web --out-dir ../_dist/wasm --out-name fluexgl-dsp-wasm'",
         "wasm:opt": "sh -c 'wasm-opt -Oz -o lib/_dist/wasm/fluexgl-dsp-wasm.wasm lib/_dist/wasm/fluexgl-dsp-wasm.wasm'",
@@ -32,10 +34,14 @@
     },
     "homepage": "https://github.com/rohankanhaisingh/FluexGL-DSP-WebAssembly#readme",
     "dependencies": {
+        "@types/colors": "^1.1.3",
+        "@types/glob": "^8.1.0",
         "@types/node": "^24.10.0",
         "@typescript-eslint/eslint-plugin": "^8.46.3",
         "@typescript-eslint/parser": "^8.46.3",
+        "colors": "^1.4.0",
         "eslint": "^9.39.1",
+        "glob": "^11.0.3",
         "html-minimizer-webpack-plugin": "^5.0.3",
         "terser-webpack-plugin": "^5.3.14",
         "text-decoder": "^1.2.3",
