Changed modular building scripts

--- a/package.json
+++ b/package.json
@@ -7,21 +7,8 @@
         "lib": "lib"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "sh:web-assembly:build": "cd scripts && ./build-wasm.sh",
-        "sh:web-assembly:watch": "cd scripts && ./watch-wasm.sh",
-        "sh:webpack:run": "npx webpack --config webpack.config.js",
-        "sh:webpack:build": "cd scripts && ./build-webpack-config.sh && cd ../",
-        "wasm-build-ps": "powershell ./scripts/powershell/BuildWasm.ps1",
-        "wasm-watch-ps": "powershell ./scripts/powershell/WatchWasm.ps1",
-        "webpack-build-ps": "powershell ./scripts/powershell/BuildWebpackConfig.ps1",
-        "webpack-run-ps": "npx webpack --config webpack.config.js",
-        "webpack-watch-ps": "npx webpack --config webpack.config.js --watch",
-        "worklets-watch-ps": "tsx ./scripts/watch-worklets-dev.ts",
-        "dev": "concurrently -n WEB,RUST -c \"npm:watch:wasm\"",
-        "wasm:rel": "sh -c 'cd lib/wasm && wasm-pack build --release --target web --out-dir ../_dist/wasm --out-name fluexgl-dsp-wasm'",
-        "wasm:opt": "sh -c 'wasm-opt -Oz -o lib/_dist/wasm/fluexgl-dsp-wasm.wasm lib/_dist/wasm/fluexgl-dsp-wasm.wasm'",
-        "build": "npm run wasm:rel && npm run wasm:opt"
+        "build-wasm": "node ./scripts/build-wasm.js",
+        "build-pipeline": "node ./scripts/build-wasm.js && node ./scripts/post-build-wasm.js && node ./scripts/move-build-to-project.js"
     },
     "repository": {
         "type": "git",
@@ -40,6 +27,7 @@
         "@typescript-eslint/eslint-plugin": "^8.46.3",
         "@typescript-eslint/parser": "^8.46.3",
         "colors": "^1.4.0",
+        "dotenv": "^17.2.3",
         "eslint": "^9.39.1",
         "glob": "^11.0.3",
         "html-minimizer-webpack-plugin": "^5.0.3",
@@ -49,6 +37,7 @@
     },
     "devDependencies": {
         "ts-loader": "^9.5.4",
+        "ts-node": "^10.9.2",
         "typescript": "^5.9.3",
         "webpack": "^5.102.1",
         "webpack-cli": "^6.0.1"
