--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "html-minimizer-webpack-plugin": "^5.0.3",
         "terser-webpack-plugin": "^5.3.14",
         "text-decoder": "^1.2.3",
-        "text-decoding": "^1.0.0"
+        "text-decoding": "^1.0.0",
+        "uuid": "^13.0.0"
     },
     "devDependencies": {
         "ts-loader": "^9.5.4",
